# DuckClaw

./: .env.example  .gitignore  MONOREPO.md  README.md  UIUX-PATTERNS.md  ecosystem.config.js  mkdocs.yml  package-lock.json  package.json  pyproject.toml  skills-lock.json
config/: CONFIG_TEMPLATES.md  api_gateways_pm2.json.example  ecosystem.api.config.cjs  ecosystem.comfyui.config.cjs  ecosystem.core.config.cjs  ecosystem.db-writer.config.cjs  ecosystem.mcp.config.cjs  ecosystem.mlx-vision.config.cjs  ecosystem.mlx.config.cjs  ecosystem.spawn.config.cjs  ecosystem.vibe-kanban.cjs  lora_config.yaml  mcp_official_reference.yaml  mcp_servers.yaml
docs/: ADMIN_AUTH_TEST_MATRIX.md  COMANDOS.md  DOCUMENTATION_MAP.md  Installation.md  README.md  Troubleshooting-Gateway-PM2.md  index.md  loginVisorImpuesto.md
integrations/edge-devices/: EDGE_DEVICES_STREAMLIT.md  README.md  SPEC.MD  pyproject.toml
integrations/edge-devices/native/: edge_core.cpp  edge_core.h
integrations/edge-devices/src/duckclaw_edge_devices/: __init__.py  app.py  client.py  link.py  protocol.py
integrations/edge-devices/tests/: test_protocol.py
notebooks/: duckclaw_olist_eda.ipynb
prueba idata/: duckclaw_olist_eda.ipynb
scripts/: README.md  README_pm25_health_pipeline.md  SCRIPTS_INDEX.md  bootstrap_dbs.py  bootstrap_team_admin.py  check_duckdb_lock_holders.py  check_telegram_ingress.py  cleanup_default_duckdb_tenant_schemas.py  crm_origin_check.py  debug_spawn_cli_env.sh  doctor.py  duckclaw_setup_wizard.py  import_templates_to_catalog.py  materialize_sft_data_dir_from_gemma4_sanitized.py  (+9 more)
(+564 files in other folders)
