[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "duckclaw-edge-devices"
version = "0.1.0"
description = "Edge device integration: libedgecore ctypes bindings and Streamlit telemetry UI"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.33.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
